--- a/config.ini
+++ b/config.ini
@@ -5,6 +5,7 @@ key=A1,A2
 key=D1,D2
 filename=data.xlsx
 sheet=0
+input=驻长10所高校，共报告295例（教职工23例、学生272例），其中：确诊6例（学生6例），校内隔离4855人、居家隔离669人、集中隔离8441人；密接7762人、次密接4352人。
 D1=驻长?所高校 A1
 D2=共报告?例 B2
 
@@ -12,6 +13,7 @@ D2=共报告?例 B2
 key=D1,D2
 filename=data.xlsx
 sheet=0
+input=
 D1=A@驻长?所高校 B3
 D2=A2共报告?例 A4
 
